--- a/Source/HTML/Pages/Products/sage_one/content_widgets/content_widget_sticky_header.html
+++ b/Source/HTML/Pages/Products/sage_one/content_widgets/content_widget_sticky_header.html
@@ -2,16 +2,25 @@
     <div class="sticky-header-inner">
         <div class="container-fluid with-max-width">
             <div class="row">
-                <div class="col-sm-5 title">
+                <div class="col-xxs-2 col-xs-1">
                     <a class="sticky-header-close" href="#" class="sticky-header-close" href="#" data-sticky-header-close="SageOneStart">
                         <img width="24" height="24" src="/Content/Sage/Images/sample_content_images/icon_close_white.svg"/>
                     </a>
-                    Sage One Start - $6.99 a months
                 </div>
-                <div class="col-sm-7 buttons">
-                    <a href="/Content/Sage/HTML/Pages/Free_trial/index.html" class="button-pink-block">Start trial</a>
-                    <a href="/Content/Sage/HTML/Pages/Buy_now/index.html" class="button-pink-block inverse">Buy now</a>
+
+                <div class="col-xxs-10 col-xs-11">
+                    <div class="row">
+                        <div class="col-sm-5 title">
+                            Sage One Start - $6.99 a months
+                        </div>
+                        <div class="col-sm-6 buttons">
+                            <a href="/Content/Sage/HTML/Pages/Free_trial/index.html" class="button-pink-block">Start trial</a>
+                            <a href="/Content/Sage/HTML/Pages/Buy_now/index.html" class="button-pink-block inverse">Buy now</a>
+                        </div>
+                    </div>
                 </div>
+
+
             </div>
         </div>
     </div>
